Bugfixes and added docstrings to finish up project

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,10 @@ body {
     background-color: #F9FAFC;
 }
 
+.profile-image {
+    width: 75%
+}
+
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
