--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -6,7 +6,12 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-12 col-md-4 text-center">
-            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+            {% if "placeholder" in about.profile_image.url %}
+            <img src="{% static 'images/nobody.jpg' %}" class="profile-image">
+            {% else %}
+            <img class="profile-image" src=" {{ about.profile_image.url }}" alt="{{ about.title }}">
+            {% endif %}
+            
         </div>
         <div class="col-12 col-md-8">
             <h2>{{ about.title }}</h2>
@@ -15,9 +20,9 @@
     </div>
     <div class="row">
         <div class="col text-right">
-          <!-- Updated on field goes in here -->
-    
-          <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+            <!-- Updated on field goes in here -->
+
+            <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
         </div>
     </div>
     <div class="row justify-content-center">
@@ -31,11 +36,11 @@
 
             <!-- add your form here. Your submit button should 
                                 have the classes of btn, btn-secondary -->
-                <form method="post">
-                    {{ collaborate_form | crispy }}
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-secondary">Submit</button>
-                </form>
+            <form method="post">
+                {{ collaborate_form | crispy }}
+                {% csrf_token %}
+                <button type="submit" class="btn btn-secondary">Submit</button>
+            </form>
         </div>
     </div>
 </div>
